# rocket-admin

./: .env  Cargo.toml  Dockerfile  README.md  deploy.sh  deployment.sh  http-client.env.json  request.http
docs/: Dockerfile  user.http
docs/sql/: sys_menu.sql
docs/sql/system/: sys_dept.sql  sys_dict_data.sql  sys_dict_type.sql  sys_menu.sql  sys_notice.sql  sys_post.sql  sys_role.sql  sys_user.sql  sys_user_post.sql  sys_user_role.sql
docs/test/: http-client.env.json
docs/test/system/: sys_dept.http  sys_dict_data.http  sys_dict_type.http  sys_login_log.http  sys_menu.http  sys_notice.http  sys_operate_log.http  sys_post.http  sys_user.http
src/: main.rs
src/common/: error.rs  result.rs  result_page.rs
src/config/: log4rs.yaml
src/handler/: menu_handler.rs  role_handler.rs  user_handler.rs
src/handler/system/: menu_handler.rs  mod.rs  role_handler.rs  sys_dept_handler.rs  sys_dict_data_handler.rs  sys_dict_type_handler.rs  sys_login_log_handler.rs  sys_menu_handler.rs  sys_notice_handler.rs  sys_operate_log_handler.rs  sys_post_handler.rs  sys_role_handler.rs  sys_user_handler.rs  user_handler.rs
src/middleware/: auth.rs
src/model/: db.rs  mod.rs
src/model/system/: sys_dict_data_model.rs  sys_dict_type_model.rs  sys_menu_model.rs  sys_user_model.rs
src/utils/: auth.rs  jwt_util.rs  mod.rs
src/vo/: menu_vo.rs  mod.rs  role_vo.rs  user_vo.rs
src/vo/system/: role_vo.rs  sys_dict_data_vo.rs  sys_dict_type_vo.rs  sys_menu_vo.rs  sys_role_vo.rs  sys_user_vo.rs  user_vo.rs
