[package]
name = "rocket-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

log = "0.4"
log4rs = "1.0"

rbs = { version = "4.5"}
rbatis = { version = "4.5"}
#rbatis = { version = "4.0",features = ["debug_mode"]}
rbdc-mysql={version="4.5"}

jsonwebtoken = "9.3.0"

futures = { version = "0.3", default-features = false }
thiserror = "2.0.3"

lazy_static = "1.4.0"
